syntax = "proto3";

package agentland.codeinterpreter.v1;
  
option go_package = "github.com/Fl0rencess720/agentland/pb/codeinterpreter;codeinterpreter";

service AgentCoreService {
  rpc CreateSandbox(CreateSandboxRequest) returns (CreateSandboxResponse);
}

service SandboxService {
  rpc ExecuteCode(ExecuteCodeRequest) returns (ExecuteCodeResponse);
}

message CreateSandboxRequest {
  string language = 1;
}

message CreateSandboxResponse {
  string sandbox_id = 1;
  string grpc_endpoint = 2;
}

message ExecuteCodeRequest {
  string language = 1;
  string code = 2;
}

message ExecuteCodeResponse {
  int32 exit_code = 1;
  string stdout = 2;
  string stderr = 3;
}
